# tflite-ethosu-delegate-imx

./: CMakeLists.txt  README.md  SCR.txt  ethosu_delegate.cc  ethosu_delegate.h  ethosu_delegate_utils.cc  ethosu_delegate_utils.h  ethosu_drv.cc  ethosu_drv.h  ethosu_supported_ops.cc  external_delegate_adaptor.cc  simple_delegate.cc  simple_delegate.h  tflite_enum_mapping.h
cmake/modules/: Findtensorflow.cmake
tests/: gen_models.py  quantize_util.py  run_model.py
tests/gen_scripts/: test_abs.py  test_add.py  test_averagepooling2d.py  test_concat.py  test_conv2d.py  test_depthwise_conv2d.py  test_exp.py  test_fullconnected.py  test_hardswish.py  test_leakyrelu.py  test_logistic.py  test_max.py  test_maxpooling2d.py  test_mean.py  test_min.py  test_mlp.py  test_mnist.py  test_mul.py  test_pack.py  test_pad.py  test_pad_c.py  test_relu.py  test_relu6.py  test_relu_n1_to_1.py  test_reshape.py  test_resize.py  test_resize_bilinear.py  test_resize_nearest.py  test_slice.py  test_softmax.py  test_split.py  test_splitv.py  test_strided_slice.py  test_sub.py  test_tanh.py  test_transpose_conv2d.py  test_unpack.py
tests/tflite_models/: test_abs_int8.tflite  test_add_int8.tflite  test_averagepooling2d_int8.tflite  test_concat_int8.tflite  test_conv2d_int8.tflite  test_depthwise_conv2d_int8.tflite  test_exp_int8.tflite  test_fullconnected_int8.tflite  test_hardswish_int8.tflite  test_leakyrelu_int8.tflite  test_logistic_int8.tflite  test_max_uint8.tflite  test_maxpooling2d_int8.tflite  test_mean_int8.tflite  test_min_uint8.tflite  test_mlp_uint8.tflite  test_mnist_uint8.tflite  (+19 more)
